Fix event view on mobile

--- a/app.css
+++ b/app.css
@@ -35,6 +35,25 @@
     /* background-color: #000000; */
 }
 
+*,
+::after,
+::before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.container,
+html,
+body {
+  height: 100%;
+  width: 100%;
+  font-size: 1rem;
+  /* font-size: 1rem!important; */
+}
+
 html, body {
     padding: 0;
     margin: 0;
