--- a/src/components/ProjectPageDetails.css
+++ b/src/components/ProjectPageDetails.css
@@ -14,24 +14,22 @@
 }
 .project--item {
   display: flex;
-  /* flex-direction: column; */
-  /* justify-content: space-between; */
-  align-items: flex-start;
-  column-gap: 20px;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
   padding: 0.5rem;
   box-shadow: 0 1px 3px #0000001a, 0 1px 2px #0000000f;
 }
 .project--item:nth-child(even) {
-  flex-direction: row-reverse;
+  flex-direction: column;
 }
 .project--avatar {
-	width: 45%;
-  width: calc(50% - 10px);
+	width: 100%;
 	height: auto;
 	/* border-radius: 50%; */
 }
 .project--summary {
-  width: calc(50% - 10px);
+  width: 100%;
 	text-align: justify;
 	/* margin: 1.5rem 0rem; */
 }
@@ -47,6 +45,24 @@
     padding-left: 1rem;
   padding-right: 1rem;
 }
+
+	.project--item {
+		flex-direction: row;
+		align-items: flex-start;
+		column-gap: 20px;
+	}
+
+	.project--item:nth-child(even) {
+		flex-direction: row-reverse;
+	}
+
+	.project--avatar {
+		width: calc(50% - 10px);
+	}
+
+	.project--summary {
+		width: calc(50% - 10px);
+	}
 
 	/* .summary {
 		margin: 1.5rem 0rem;
